log/build_2024-02-15_01-30-26/mypkg/stderr.log
  File "/home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg/receiver.py", line 102
    global frame = data * alpha
                 ^
SyntaxError: invalid syntax

